--- a/src/functions/functions.html
+++ b/src/functions/functions.html
@@ -6,7 +6,7 @@
     <title></title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <script src="../scripts/jquery-3.5.0.min.js" type="text/javascript"></script>
-    <script src="../config.js" type="text/javascript"></script>
+    <script src="../scripts/config.js" type="text/javascript"></script>
     <script src="functions.js" type="text/javascript"></script>
 </head>
 <body>
