amélioration du fichier de config webpack

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="template.css" rel="stylesheet" />
+  <link href="./css/template.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -27,9 +27,5 @@
       </li>
     </ul>
   </div>
-
-  <script src="template.js"></script>
-  <script>
-  </script>
 </body>
 </html>
