--- a/src/functions.html
+++ b/src/functions.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title></title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-    <script src="../scripts/jquery-3.5.0.min.js" type="text/javascript"></script>
-    <script src="../scripts/config.js" type="text/javascript"></script>
-    <script src="functions.js" type="text/javascript"></script>
+    <script src="./js/jquery-3.5.0.min.js" type="text/javascript"></script>
+    <script src="./js/config.js" type="text/javascript"></script>
+    <script src="./js/functions.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
