ajout de l'url vers wce-appli-bureau

--- a/src/template.html
+++ b/src/template.html
@@ -46,6 +46,11 @@
             Rejoindre via le lien / Join by clicking the link <a href="%url%">%url%</a><br>
           </li>
           <li>
+            <b>Depuis l'application bureau "Webconférence de l'Etat"</b><br>
+            <b>From the desktop app "Webconférence de l'Etat"</b><br>
+            <a href="%desktop_url%">Rejoindre en cliquant ici / Join by clicking here</a><br>
+          </li>
+          <li>
             <b>Depuis un téléphone</b><br>
             <b>From a telephone</b><br>
             Composez le <b><a href="tel:%phone_numbers%">%phone_numbers%</a></b> puis saisissez le code de la conférence
