--- a/src/functions.html
+++ b/src/functions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title></title>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+    <script src="./js/office.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
